added jquery slideup to flash notices

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <head>
   <%= stylesheet_link_tag "site" %>
+  <%= javascript_include_tag "jquery-1.3.2", "site" %>
 </head>
 <div id="flash">
   <% flash.each do |key, value| -%>
