--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -11,7 +11,11 @@
   padding-left: 5px;
 }
 
-#flash_notice {
+#flash {
   background-color: #FF0;
   text-align; center;
+}
+
+#thumbsup {
+  border: none;
 }
