--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <%= stylesheet_link_tag "site" %><%= javascript_include_tag "jquery-1.3.2", "site" %>
-    <title></title>
+    <title>Whitefish Mountain Resort - Vote for your Favorite Hero Photos from 2008-2009</title>
   </head>
   
   <body>
