--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,26 +1,25 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
   <head>
-    <%= stylesheet_link_tag "site" %><%= javascript_include_tag "jquery-1.3.2", "site" %>
-    <title>Whitefish Mountain Resort - Vote for your Favorite Hero Photos from 2008-2009</title>
+    <%= stylesheet_link_tag "site", "highslide" %>
+    <!--[if lt IE 7]>
+      <link rel="stylesheet" type="text/css" href="/stylesheets/highslide-ie6.css" />
+    <![endif]-->
+    <%= javascript_include_tag "jquery-1.3.2", "highslide", "site" %>
+    <title>
+      Whitefish Mountain Resort - Vote for your Favorite Hero Photos from 2008-2009
+    </title>
   </head>
-  
   <body>
-    
     <div id="flash">
       <% flash.each do |key, value| -%>
-        <div id="flash_&lt;%= key -%&gt;">
-          <%= html_escape(value) %>
-        </div>
-      <% end -%>
-    </div>
-    
-    <%= yield %>
-    
+      <div id="flash_&lt;%= key -%&gt;">
+        <%= html_escape(value) %>
+      </div><% end -%>
+    </div><%= yield %>
     <p>
       <br>
       <br>
     </p>
-    
   </body>
 </html>
