--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -1,21 +1,43 @@
+body {
+  background-color:#F7F4D7;
+}
+
 .entry {
-  padding-right: 20px;
   float: left;
+  height: 150px;
+  margin-bottom: 20px;
+  max-width: 180px;
+  padding-right: 20px;
+}
+
+.photo img {
+  height: 113px;
+  border: none;
+  margin-bottom: -3px;
+}
+
+.title {
+  font-family: Georgia;
+  font-size: 80%;
+}
+
+.vote {
 }
 
 .bottom_links {
+  background-color: #F7F4D7;
+  bottom: 0;
+  padding: 10px 10px 10px 5px;
   position: fixed;
-  bottom: 0px;
-  background: white;
-  padding: 10px;
-  padding-left: 5px;
 }
 
 #flash {
-  background-color: #FF0;
-  text-align; center;
+  background-color: #FFFF00;
+  margin-bottom: 10px;
 }
 
 #thumbsup {
-  border: none;
+  border: 0px none;
+  position: relative;
+  top: 4px;
 }
