updated css to make links match skiwhitefish.com

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -2,6 +2,17 @@ body {
   background-color:#F7F4D7;
 }
 
+a {
+text-decoration: underline;
+color: #333;
+}
+
+a:hover {
+text-decoration: none;
+color: #333;
+}
+
+
 .entry {
   float: left;
   height: 150px;
