--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -27,6 +27,7 @@
         <a href="/entries/vote/<%= entry.id %>">
           <img id="thumbsup" src="/images/thumbsup.png" />
         </a>
+        (<%= entry.votes_for %>)
       </span>
     </div> <!-- #caption -->
   </div> <!-- #entry -->
