--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <![endif]-->
     <%= javascript_include_tag "jquery-1.3.2", "highslide", "site" %>
     <title>
-      Whitefish Mountain Resort - Vote for your Favorite Hero Photos from 2008-2009
+      Whitefish Mountain Resort - The Most Popular Hero Photos from 2008-2009
     </title>
   </head>
   <body>
